force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageDataEvent__e/SVMXA360__COMM_ApplicationUsageDataEvent__e.object-meta.xml
<CustomObject>
    <description>To publish events to record usage data analytics for actions taken on wizards.</description>
    <label>Application Usage Data Event</label>
    <pluralLabel>Application Usage Data Events</pluralLabel>
</CustomObject>