force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageDataEvent__e/fields/SVMXA360__ActionName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ActionName__c</fullName>
    <description>Stores the initiated action Name</description>
    <label>Action Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>