force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageDataEvent__e/fields/SVMXA360__ActionRecordId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ActionRecordId__c</fullName>
    <description>Stores the wizard step recordId</description>
    <label>Action Record Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>