force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageDataEvent__e/fields/SVMXA360__EpochEndTime__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EpochEndTime__c</fullName>
    <description>Stores Epoch time of action initiated</description>
    <label>Epoch End Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>