force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageDataEvent__e/fields/SVMXA360__ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectApiName__c</fullName>
    <description>Stores the object API name where the feature is used</description>
    <label>Object Api Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>