force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageDataEvent__e/fields/SVMXA360__SourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceRecordId__c</fullName>
    <description>Stores Source recordId where feature’s action initiated</description>
    <label>Source Record Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>