force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageDataEvent__e/fields/SVMXA360__UniqueId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UniqueId__c</fullName>
    <description>Stores the UUID</description>
    <label>Unique Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>