force-app/main/default/objects/SVMXA360__COMM_ApplicationUsageDataEvent__e/fields/SVMXA360__UserId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UserId__c</fullName>
    <description>Stores User detail, who initiated the action</description>
    <label>User Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>